- improve consistency of editing commands
- more translation fixes
- small LaTeX output fixes
- fix gnuplot PNG output for gnuplot version 3.8
- fix encoding for gnuplot postscript output under NLS
- fix pango encoding issue for gnuplot axis label strings
- fix gnuplot "keyspec" bug 
- add auto-scaling of gui windows if the user has selected a
  large font

10/10/02 version 1.0pre3
- improve accuracy of calculation of standard errors, and
  numerical accuracy on MS Windows in general
- make gretl databases installable in user directory as well as
  system database directory
- make console output scroll to cursor in gtk2 version
- fix more translation issues
- fix bug in normality chi-square test for large n
- fix bug that prevented CUSUM plot from displaying
- fix normality of residual test: print to model window was
  incomplete
- fix translation issue in LaTeX print of equation
- backport fix for impulse plot to gtk-1.2 version
- fix bug at exit of gretlcli with "quit" and no filename
- fixes for bugs in gnumeric file reader
- fixes for Excel reader -- handle missing obs and Far East info
- fix for gretlcli under NLS: ensure that the translations come
  out in the local encoding, not utf-8
- remove Gtk 2.0 right click menu on text windows
- update translations and integrate the French translation

09/20/2002 version 1.0pre2 (pre1 was "for translators only")
- add range-mean graph option to GUI Variable menu, and
  as new command "rmplot"
- add retrievable variable $pd = data periodicity
- add min() and max() functions to the functions available 
  for use with the "genr" command
- add Least Absolute Deviations regression ("lad" command)
- fix bugs in saving output to named file, in both gretlcli and
  gui program
- fix bug in boxplots for languages other than English
- fix error in df in sample script ps4-2.inp
- fix translation of date strings in gretl output
- linux: move plugins to ${prefix}/lib/gretl
- gnome 2.0: use gconf apparatus