@@ -10,6 +10,9 @@ version 1.0pre4
 - fix gnuplot "keyspec" bug 
 - add auto-scaling of gui windows if the user has selected a
   large font
+- add printing of rho (used in quasi-differencing) to LaTeX
+  output for corc and hilu models
+- enhanced support for Wooldridge data files
 
 10/10/02 version 1.0pre3
 - improve accuracy of calculation of standard errors, and
